[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "galaxy-vast-ai-trading"
version = "2.0.0"
description = "Galaxy Vast AI Trading Platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
]

[tool.coverage.run]
source = ["backend"]
omit = [
    "backend/tests/*",
    "backend/analysis/smc_engine.py",
    "backend/analysis/price_action_engine.py",
    "backend/analysis/decision_engine.py",
]

[tool.coverage.report]
# FIX: was 60 — target is 80%
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501", "B008", "N806", "SIM117"]

[tool.ruff.per-file-ignores]
"backend/tests/*" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
